--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,15 @@ django-cors-headers==4.7.0
 djangorestframework==3.15.2
 djangorestframework_simplejwt==5.4.0
 drf-yasg==1.21.8
+flake8==7.1.2
 gunicorn==23.0.0
 inflection==0.5.1
+mccabe==0.7.0
 packaging==24.2
-pillow==11.1.0
+pillow==11.1.0x
 psycopg2-binary==2.9.10
+pycodestyle==2.12.1
+pyflakes==3.2.0
 PyJWT==2.10.1
 python-decouple==3.8
 pytz==2025.1
