--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ gunicorn==23.0.0
 inflection==0.5.1
 mccabe==0.7.0
 packaging==24.2
-pillow==11.1.0x
+pillow==11.1.0
 psycopg2-binary==2.9.10
 pycodestyle==2.12.1
 pyflakes==3.2.0
